--- a/commands/config/config.json
+++ b/commands/config/config.json
@@ -2,6 +2,7 @@
   "name": "Server Configuration",
   "about": "Conf",
   "commands": [
-    "setChannel"
+    "setChannel",
+    "setConfig"
   ]
 }
