--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "democracy",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "A democratic Discord bot.",
   "main": "bot.js",
   "dependencies": {
+    "dblapi.js": "^2.3.0",
     "discord.js": "^11.5.1",
     "dotenv": "^8.0.0",
     "moment": "^2.24.0",
     "mysql": "^2.17.1",
-    "set-interval-async": "1.0.26",
-    "socks-proxy-agent": "^4.0.2"
+    "set-interval-async": "1.0.26"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Max Rumsey (maxrumsey.xyz) <max@maxrumsey.xyz>",
+  "license": "MIT"
 }
