--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "democracy",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "description": "A democratic Discord bot.",
   "main": "bot.js",
   "dependencies": {
@@ -13,7 +13,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node bot.js"
   },
   "author": "Max Rumsey (maxrumsey.xyz) <max@maxrumsey.xyz>",
   "license": "MIT"
